<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_title">ORZUGRAND</string>
    <string name="welcome">Здравствуйте,</string>
    <string name="test_name">Дониёр</string>
    <string name="search">Поиск товаров</string>
    <string name="all_discounts">Все акции</string>
    <string name="read">Читать все</string>
    <string name="daily_product">Товар дня</string>
    <string name="time">22:33:15</string>
    <string name="best">Хит</string>
    <string name="product_name">Микроволновая печь соло Gorenje\nMO17E1W</string>
    <string name="old_price">2 000 000</string>
    <string name="new_price">1 750 000</string>
    <string name="recomended">Рекомендуем вам</string>
    <string name="look_at_all">Смотреть все 15</string>
    <string name="dream">ORZU</string>
    <string name="blog">BLOG</string>
    <string name="article">Статья</string>
    <string name="smal_article">Топ-20 лучших недорогих планшетов на сегодняшний день</string>
    <string name="have_evrythng">У нас всё!</string>
    <string name="move_category">Хватит листать,\nпереходи в каталог.</string>
    <string name="category">Каталог</string>
</resources>