<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/daily_product"
            android:textColor="@color/black"
            android:textSize="@dimen/_22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/time"
            android:textColor="@color/gray"
            android:textSize="@dimen/_16sp" />

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        app:cardCornerRadius="@dimen/_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:background="@drawable/bg_best"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:text="@string/best"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp" />

            <ImageView
                android:layout_width="@dimen/_175dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:src="@drawable/image1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:layout_marginTop="@dimen/_8dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_16dp"
                android:layout_marginStart="@dimen/_16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/oldPriceTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/old_price"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/new_price"
                        android:textColor="@color/main_color"
                        android:textSize="@dimen/_14sp" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_marginEnd="@dimen/_16dp"
                    app:cardBackgroundColor="@color/main_color"
                    app:cardCornerRadius="@dimen/_12dp"
                    app:contentPaddingBottom="@dimen/_8dp"
                    app:contentPaddingLeft="@dimen/_32dp"
                    app:contentPaddingRight="@dimen/_32dp"
                    app:contentPaddingTop="@dimen/_8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_shopping_cart" />

                </androidx.cardview.widget.CardView>

            </FrameLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/image2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:adjustViewBounds="true"
            android:src="@drawable/image3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:adjustViewBounds="true"
            android:src="@drawable/image4" />

    </LinearLayout>

</LinearLayout>